# morning

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  morning.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  main.yml  release.yml
.trunk/: trunk.yaml
charts/morning/: Chart.yaml  values.yaml
charts/morning/templates/: NOTES.txt  _helpers.tpl  deployment-morning.yaml  hpa.yaml  ingress.yaml  morning-deployment.yaml  morning-service.yaml  redis-deployment.yaml  selenium-deployment.yaml  selenium-service.yaml  service.yaml  serviceaccount.yaml
charts/morning/templates/tests/: test-connection.yaml
src/: morning.py
