[tool.poetry]
name = "morning"
version = "0.1.0"
description = "A scraper for ilpost.it"
authors = ["Andrea Cervesato <andrea.cervesato@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"
gunicorn = "^20.1.0"
requests = "^2.27.1"
redis = "^4.3.3"
python-dotenv = "^0.20.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
orjson = "^3.7.2"
numpy = "^1.22.4"
pip = "^22.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
